# perfwatch-cli

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
ai/: __init__.py  gemini.py  prompts.py
cli/: __init__.py  __main__.py
cli/commands/: audit.py  init.py  lighthouse.py  loadtest.py  report.py  seo.py
config/: settings.yaml
core/: __init__.py  agent.py  analyzer.py  planner.py  reporter.py
tools/: __init__.py  loadtest.py  pagespeed.py  seo.py
utils/: __init__.py  config.py  logger.py  validator.py
